# FP

./: .gitignore  STATUS.md  pyproject.toml
fugueforge/: __init__.py  cli.py
fugueforge/core/: analyzer.py  candidates.py  coda.py  counterpoint.py  episodes.py  exposition.py  generator.py  harmony.py  invention_generator.py  invention_planner.py  judge.py  placement.py  planner.py  postprocess.py  representation.py  rules.py  search.py  voice_utils.py
fugueforge/corpus/: __init__.py  gold.py  inventions.py  loader.py  pipeline.py
fugueforge/scripts/: ablation_study.py  generate_invention_midi.py  generate_midi.py  stat_benchmark.py
tests/: test_core.py  test_corpus.py
