[project]
name = "fugueforge"
version = "0.1.0"
description = "Neurosymbolic Fugue Composition Engine"
requires-python = ">=3.10"
dependencies = [
    "music21>=9.1",
    "numpy>=1.24",
    "midiutil>=1.2",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
fugueforge = "fugueforge.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
